--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <header>
           <img src="../UX_UI_HW_18/images/White and Green Minimalist Architectural Logo.png" alt="Alicia Alvo Abelow Logo" width="100" height="100">
           <ul>
-            <li>About</li>
-            <li>Projects</li>
-            <li>Experience</li>
-            <li>Contact</li>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
           </ul>
         </header>
         <section class="heroImg">
@@ -21,26 +21,26 @@
               <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
             </div>
           </section>
-          <h1 class="heading">Experience</h1>
+          <h1 id="skills" class="heading">Skills</h1>
           <section class="flexContainer">
             <div>
             <img src="../UX_UI_HW_18/images/image_placeholder.png" alt="image_placeholder" width="200" height="100">
-              <h3>Education & Brain Research</h3>
+              <h3>UX Research</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. </p>
             </div>
             <div>
             <img src="../UX_UI_HW_18/images/image_placeholder.png" alt="image_placeholder" width="200" height="100">
-              <h3>Instructional Design and Creation</h3>
+              <h3>UI Design</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. </p>
             </div>
             <div>
             <img src="../UX_UI_HW_18/images/image_placeholder.png" alt="image_placeholder" width="200" height="100">
-              <h3>UX Research and UI Design</h3>
+              <h3>Brain Research & Instructional Design</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. </p>
             </div>
           </section>
       
-          <section class="myProjects">
+          <section id="projects" class="myProjects">
             <h1 class="heading">Projects</h1>
             <div class="projectsGrid">
               <div class="img1">
@@ -71,18 +71,16 @@
           </section>
           <footer>
             <ul>
-              <li>About</li>
-              <li>Projects</li>
-              <li>Experience</li>
-              <li>Contact</li>
+              <a href="#about">About</a>
+              <a href="#projects">Projects</a>
+              <a href="#skills">Skills</a>
+              <a href="#contact">Contact</a>
             </ul>
           </footer>
         </body>
       </html>
       
-
-
-
-
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/index.js"></script>
 
 </html>>
